fixup! Use cryptography for hash algorithms in DH

--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,12 @@ extras =
     httplib2: httplib2
     pycurl: pycurl
     requests: requests
-passenv = CI TRAVIS TRAVIS_* PYTHONWARNINGS
+passenv = CI TRAVIS TRAVIS_*
 setenv =
     DJANGO_SETTINGS_MODULE = djopenid.settings
     PYTHONPATH = {toxinidir}/examples:{env:PYTHONPATH:}
+# For some reason, python2.7 doesn't always apply `warnings.simplefilter` correctly. Set 'all' as default to avoid.
+    PYTHONWARNINGS = {env:PYTHONWARNINGS:all}
 commands =
     coverage run --parallel-mode --branch --source=openid,examples --module unittest discover --start=openid
     djopenid: coverage run --parallel-mode --branch --source=openid,examples --module unittest discover --start={toxinidir}/examples
